feat: add new product
