# src/docs/swagger/swagger.json
@@ -90,6 +90,108 @@
           }
         }
       }
+    },
+    "/products": {
+      "post": {
+        "summary": "Cria um novo produto",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "price": {
+                    "type": "string"
+                  },
+                  "category": {
+                    "type": "string"
+                  },
+                  "description": {
+                    "type": "string"
+                  }
+                },
+                "required": ["name", "price", "category", "description"]
+              },
+              "examples": {
+                "example1": {
+                  "summary": "Exemplo de criação de Produto 1",
+                  "value": {
+                    "name": "Produto Exemplo",
+                    "price": "19.99",
+                    "category": "Lanche",
+                    "description": "Descrição do produto exemplo"
+                  }
+                },
+                "example2": {
+                  "summary": "Exemplo de erro na criação",
+                  "value": {
+                    "name": "Produto Sem Preço"
+                  }
+                },
+                "example3": {
+                  "summary": "Exemplo de erro de categoria",
+                  "value": {
+                    "name": "Produto Exemplo",
+                    "price": "19.99",
+                    "category": "LANCHE",
+                    "description": "Descrição do produto exemplo"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Produto criado com sucesso",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "success": {
+                    "summary": "Produto criado com sucesso",
+                    "value": {
+                      "id": "123456",
+                      "name": "Produto Exemplo",
+                      "price": "19.99",
+                      "category": "Lanche",
+                      "description": "Descrição do produto exemplo",
+                      "createdAt": "2023-10-01T12:00:00Z",
+                      "updatedAt": "2023-10-01T12:00:00Z"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro interno de servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "examples": {
+                  "errorExample": {
+                    "summary": "Exemplo de resposta de erro",
+                    "value": {
+                      "error": "Error creating product: Missing required fields"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -107,6 +209,35 @@
             "type": "string"
           },
           "cpf": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
+      "Product": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "price": {
+            "type": "string"
+          },
+          "category": {
+            "type": "string",
+            "enum": ["Lanche", "Acompanhamento", "Bebida", "Sobremesa"]
+          },
+          "description": {
             "type": "string"
           },
           "createdAt": {
